# IndieStudio

./: .gitignore  BombermanServer  CMakeLists.txt  CMakeLists2.txt  COMMUNICATION.md  peda-session-30953.txt  testbutton
Base.lproj/: CMakeLists.txt
cmake-dependencies/: FindSFML.cmake
cmake-dependencies/win32/: FindIrrlicht.cmake  FindSFML.cmake
cmake-dependencies/win64/: FindIrrlicht.cmake  FindSFML.cmake
include/: AIControllerUtils.hpp  AStarAlgorithm.hpp  Exception.hpp  Game.hpp  IDGenerator.hpp  MapGenerator.hpp  MapLoader.hpp  PresetAction.hpp  PresetLoader.hpp  Scene.hpp  SettingsLoader.hpp  Utils.hpp
include/Audio/: AudioMusicSource.hpp  AudioSoundSource.hpp  IAudioSource.hpp
include/Components/: AIController.hpp  Alert.hpp  Animator.hpp  Audio.hpp  AudioComponent.hpp  Bomb.hpp  Bomberman.hpp  Button.hpp  Camera.hpp  Character.hpp  CharacterController.hpp  Collider.hpp  ColliderComponent.hpp  ColliderTrigger.hpp  Cursor.hpp  Fire.hpp  GUIElement.hpp  Gravity.hpp  Hud.hpp  Image.hpp  InputManager.hpp  JoystickCursor.hpp  JoystickInput.hpp  JoystickPreset.hpp  Jump.hpp  KeyboardInput.hpp  KeyboardPreset.hpp  Light.hpp  ModelRenderer.hpp  Movement.hpp  Network.hpp  NetworkInput.hpp  NumberField.hpp  Particule.hpp  PowerUp.hpp  Preset.hpp  Rules.hpp  RulesSetting.hpp  Slider.hpp  Stats.hpp  (+6 more)
include/ECS/: AScene.hpp  ASystem.hpp  Component.hpp  ComponentManager.hpp  Entity.hpp  EntityManager.hpp  IScene.hpp  ISystem.hpp  SystemManager.hpp
include/EventManager/: EventManager.hpp
include/Prefabs/: .GlobalPrefabs.hpp.swp  EndGamePrefabs.hpp  GlobalPrefabs.hpp  RuleSettingsPrefabs.hpp
include/Scenes/: ControllersScene.hpp  CreditScene.hpp  EndGameScene.hpp  GameScene.hpp  HowToPlayScene.hpp  MainMenuScene.hpp  MultiplayerGameScene.hpp  MultiplayerHubScene.hpp  MultiplayerLobbyChoiceScene.hpp  MultiplayerLobbyScene.hpp  MultiplayerRuleSettingsScene.hpp  MultiplayerScene.hpp  PauseScene.hpp  PresetSelectionScene.hpp  RecordScene.hpp  RuleSettingsScene.hpp  SettingsScene.hpp  SplashScreenScene.hpp  test.hpp
include/Systems/: AIController.hpp  AIControllerLevel1.hpp  AIControllerLevel2.hpp  AIControllerLevel3.hpp  AIControllerLevel4.hpp  AIControllerLevel5.hpp  Alert.hpp  Audio.hpp  AudioSystem.hpp  Bomb.hpp  Bomberman.hpp  Button.hpp  Camera.hpp  CharacterController.hpp  Collider.hpp  ColliderSystem.hpp  ColliderTrigger.hpp  Cursor.hpp  EndGame.hpp  Fire.hpp  Gravity.hpp  Hud.hpp  Image.hpp  JoystickCursor.hpp  JoystickInput.hpp  Jump.hpp  KeyboardInput.hpp  Light.hpp  ModelRenderer.hpp  Movement.hpp  Network.hpp  NetworkInput.hpp  Particule.hpp  Pause.hpp  PowerUp.hpp  Preset.hpp  SettingsLoaderSystem.hpp  Slider.hpp  Text.hpp  Texture.hpp  (+3 more)
include/audio/: AudioMusicSource.hpp  AudioSoundSource.hpp  IAudioSource.hpp
resources/: .gitignore  Default IBL.tif  Prop_Block_Brick.mtl  Prop_Block_Pause.mtl  Prop_Crate.mtl  Prop_Lollipop.mtl  Prop_Mushroom_1.mtl  Prop_Mushroom_2.mtl  Prop_Star.mtl  Prop_Tree_2.mtl  bomb.b3d  bomb.mtl  crate.mtl  cubb.mtl  env.b3d  grass.mtl  poteau.mtl  powerup.b3d  tree1.b3d  tree2.b3d  tree3.b3d  tree4.b3d
resources/assets_base/old/: b_1.psd
resources/fonts/EndGame/: endGameFont.xml
resources/fonts/fontVolumeSettings/: fontVolumeSettings.xml
resources/ui/psd/: button.psd  button_pressed.psd  title.psd
src/: AIControllerUtils.cpp  AStarAlgorithm.cpp  Exception.cpp  Game.cpp  IDGenerator.cpp  MapGenerator.cpp  MapLoader.cpp  PresetAction.cpp  PresetLoader.cpp  Scene.cpp  SettingsLoader.cpp  Utils.cpp  main.cpp
src/Audio/: AudioMusicSource.cpp  AudioSoundSource.cpp
src/Components/: AIController.cpp  Alert.cpp  Animator.cpp  Audio.cpp  AudioComponent.cpp  Bomb.cpp  Bomberman.cpp  Button.cpp  Camera.cpp  Character.cpp  CharacterController.cpp  Collider.cpp  ColliderComponent.cpp  ColliderTrigger.cpp  Cursor.cpp  Fire.cpp  GUIElement.cpp  Gravity.cpp  Hud.cpp  Image.cpp  InputManager.cpp  JoystickCursor.cpp  JoystickInput.cpp  JoystickPreset.cpp  Jump.cpp  KeyboardInput.cpp  KeyboardPreset.cpp  Light.cpp  ModelRenderer.cpp  Movement.cpp  Network.cpp  NetworkInput.cpp  NumberField.cpp  Particule.cpp  PowerUp.cpp  Preset.cpp  Rules.cpp  RulesSetting.cpp  RulesSettingComponent.cpp  Slider.cpp  (+8 more)
src/ECS/: AScene.cpp  ASystem.cpp  Component.cpp  ComponentManager.cpp  Entity.cpp  EntityManager.cpp  SystemManager.cpp
src/EventManager/: EventManager.cpp
src/Network/server/: main.py
src/Prefabs/: ControllersPrefabs.cpp  EndGamePrefabs.cpp  GlobalPrefabs.cpp  MainMenu.cpp  MenuPrefabs.cpp  PresetSelectionPrefabs.cpp  RuleSettingsPrefabs.cpp  SettingsPrefabs.cpp  SplashScreen.cpp
src/Scenes/: ControllersScene.cpp  CreditScene.cpp  EndGameScene.cpp  GameScene.cpp  HowToPlayScene.cpp  MainMenuScene.cpp  MultiplayerGameScene.cpp  MultiplayerHubScene.cpp  MultiplayerLobbyChoiceScene.cpp  MultiplayerLobbyScene.cpp  MultiplayerRuleSettingsScene.cpp  MultiplayerScene.cpp  PauseScene.cpp  PresetSelectionScene.cpp  RecordScene.cpp  RuleSettingsScene.cpp  SettingsScene.cpp  SplashScreen.cpp  SplashScreenScene.cpp
src/Systems/: AIController.cpp  AIControllerLevel1.cpp  AIControllerLevel2.cpp  AIControllerLevel3.cpp  AIControllerLevel4.cpp  AIControllerLevel5.cpp  Alert.cpp  Audio.cpp  AudioSystem.cpp  Bomb.cpp  Bomberman.cpp  Button.cpp  Camera.cpp  CharacterController.cpp  Collider.cpp  ColliderSystem.cpp  ColliderTrigger.cpp  Cursor.cpp  EndGame.cpp  Fire.cpp  Gravity.cpp  Hud.cpp  Image.cpp  JoystickCursor.cpp  JoystickInput.cpp  Jump.cpp  KeyboardInput.cpp  Light.cpp  ModelRenderer.cpp  Movement.cpp  Network.cpp  NetworkInput.cpp  Particule.cpp  Pause.cpp  PowerUp.cpp  Preset.cpp  SettingsLoaderSystem.cpp  Slider.cpp  Text.cpp  Texture.cpp  (+3 more)
src/audio/: AudioMusicSource.cpp  AudioSoundSource.cpp
